header section done!

--- a/index.html
+++ b/index.html
@@ -17,8 +17,47 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="font-poppins">
     <!-- ====== Header Start ====== -->
+    <header class="p-4 bg-headerBG border-b-2 border-solid border-[#FFB800]">
+      <div class="max-w-container mx-auto">
+        <div class="flex justify-between items-center">
+          <div class="flex gap-x-11">
+            <div class="flex gap-[5px] items-center relative">
+              <i class="fa-solid fa-envelope-circle-check text-white"></i>
+              <a class="text-white" href="mailto:mail@yourcompany.com"
+                >mail@yourcompany.com</a
+              >
+              <div
+                class="after:absolute after:content-[''] after:bg-[#5C6A92] after:w-[2px] after:h-[22px] after:top-[0] after:right-[-22px]"
+              ></div>
+            </div>
+            <div class="flex gap-[5px] items-center">
+              <i class="fa-solid fa-phone-volume text-white"></i>
+              <a class="text-white" href="tel:+896 120 5889"
+                >+896 120 5889 (Toll free)</a
+              >
+            </div>
+          </div>
+          <div>
+            <div class="flex gap-5">
+              <a class="text-white" href="https://www.facebook.com"
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
+              <a class="text-white" href="https://www.facebook.com"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a class="text-white" href="https://www.facebook.com"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
+              <a class="text-white" href="https://www.facebook.com"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
     <!-- ====== Header End ====== -->
 
     <!-- ====== Navbar Start ====== -->
