navbar section done!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="font-poppins">
     <!-- ====== Header Start ====== -->
-    <header class="p-4 bg-headerBG border-b-2 border-solid border-[#FFB800]">
+    <header class="py-4 bg-headerBG border-b-2 border-solid border-[#FFB800]">
       <div class="max-w-container mx-auto">
         <div class="flex justify-between items-center">
           <div class="flex gap-x-11">
@@ -61,6 +61,56 @@
     <!-- ====== Header End ====== -->
 
     <!-- ====== Navbar Start ====== -->
+    <nav class="bg-navbarBG py-[27px]">
+      <div class="max-w-container mx-auto">
+        <div class="flex justify-between items-center">
+          <div class="w-[40%]">
+            <picture>
+              <a href="#"><img src="./images/logo.png" alt="not found" /></a>
+            </picture>
+          </div>
+          <div class="w-[60%] flex justify-between items-center gap-x-[163px]">
+            <div>
+              <ul class="flex items-center gap-[47px]">
+                <li>
+                  <a
+                    class="text-white font-4 leading-none font-semibold capitalize"
+                    href="#"
+                    >Home</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="text-white font-4 leading-none font-semibold capitalize"
+                    href="#"
+                    >about</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="text-white font-4 leading-none font-semibold capitalize"
+                    href="#"
+                    >service</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="text-white font-4 leading-none font-semibold capitalize"
+                    href="#"
+                    >Gallery</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div>
+              <a class="py-3.5 px-8 text-white border-2 border-[#fff]" href="#"
+                >Contact us</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
     <!-- ====== Navbar End ====== -->
 
     <!-- ====== Banner Start ====== -->
