banner sectio done

--- a/index.html
+++ b/index.html
@@ -114,6 +114,23 @@
     <!-- ====== Navbar End ====== -->
 
     <!-- ====== Banner Start ====== -->
+    <section
+      class="pt-[257px] pb-[340px] bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.6)),url('./images/banner.jpg')] bg-no-repeat bg-cover bg-center"
+    >
+      <div class="max-w-container mx-auto">
+        <div class="pl-[17px]">
+          <h1
+            class="text-white font-bold text-[64px] capitalize w-[842px] pb-[31px]"
+          >
+            We exist since 1975 on the oil and gas industry.
+          </h1>
+          <a href="#" class="py-[13px] px-[40px] bg-primary text-white uppercase text-base inline-block outline-none border-none">Learn more</a>
+        </div>
+      </div>
+      <!-- <div
+        class="w-full h-full absolute top-0 left-0 bg-gradient-to-t from-[#000] to-[#000] opacity-60"
+      ></div> -->
+    </section>
     <!-- ====== Banner End ====== -->
 
     <!-- ====== Info Start ====== -->
