info section done!

--- a/index.html
+++ b/index.html
@@ -124,7 +124,11 @@
           >
             We exist since 1975 on the oil and gas industry.
           </h1>
-          <a href="#" class="py-[13px] px-[40px] bg-primary text-white uppercase text-base inline-block outline-none border-none">Learn more</a>
+          <a
+            href="#"
+            class="py-[13px] px-[40px] bg-primary text-white uppercase text-base inline-block outline-none border-none"
+            >Learn more</a
+          >
         </div>
       </div>
       <!-- <div
@@ -134,6 +138,21 @@
     <!-- ====== Banner End ====== -->
 
     <!-- ====== Info Start ====== -->
+    <section class="pt-[78px] pb-[100px]">
+      <div class="max-w-container mx-auto">
+        <div class="flex justify-between items-center gap-x-[196px]">
+          <h2 class="text-5xl leading-[72px] font-bold text-black-900">
+            The biggest supplier on the country
+          </h2>
+          <p class="font-medium text-base">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a more-or-less normal
+            distribution.
+          </p>
+        </div>
+      </div>
+    </section>
     <!-- ====== Info End ====== -->
 
     <!-- ====== Image Slider Start ====== -->
