image section done!

--- a/index.html
+++ b/index.html
@@ -156,6 +156,26 @@
     <!-- ====== Info End ====== -->
 
     <!-- ====== Image Slider Start ====== -->
+    <section class="w-full overflow-hidden">
+      <div class="flex flex-shrink">
+        <img src="./images/car.jpg" alt="" class="h-full w-full object-cover" />
+        <img
+          src="./images/petrol.png"
+          alt=""
+          class="h-full w-full object-cover"
+        />
+        <img
+          src="./images/petrol_pipe.png"
+          alt=""
+          class="h-full w-full object-cover"
+        />
+        <img
+          src="./images/ship.png"
+          alt=""
+          class="h-full w-full object-cover"
+        />
+      </div>
+    </section>
     <!-- ====== Image Slider End ====== -->
 
     <!-- ====== Service Start ====== -->
