service section done!

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <h2 class="text-5xl leading-[72px] font-bold text-black-900">
             The biggest supplier on the country
           </h2>
-          <p class="font-medium text-base">
+          <p class="font-medium text-base text-paragraphColor">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -179,6 +179,50 @@
     <!-- ====== Image Slider End ====== -->
 
     <!-- ====== Service Start ====== -->
+    <section class="w-full">
+      <div class="w-full flex flex-wrap items-center">
+        <div class="w-[50%]">
+          <div class="max-w-container mx-auto">
+            <div class="flex flex-col ml-[390px]">
+              <h3 class="text-black text-[64px] font-bold">Our Services</h3>
+              <p class="text-paragraphColor font-medium text-base w-[405px]">
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page when looking at its layout.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="w-[50%]">
+          <img src="./images/pipelines.jpg" alt="" />
+        </div>
+      </div>
+      <div class="w-full flex flex-wrap items-center">
+        <div
+          class="w-[50%] pt-[147px] pr-[303px] pb-[209px] pl-[116px] bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.6)),url('./images/soldering.png')] bg-no-repeat bg-cover bg-center"
+        >
+          <h5 class="text-4xl text-white font-bold pb-[19px] w-[541px]">
+            Supply of national industries.
+          </h5>
+          <a
+            href="#"
+            class="py-[13px] px-[40px] bg-primary text-white uppercase text-base inline-block outline-none border-none"
+            >Learn more</a
+          >
+        </div>
+        <div
+          class="w-[50%] pt-[147px] pr-[303px] pb-[209px] pl-[116px] bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.6)),url('./images/polish.png')] bg-no-repeat bg-cover bg-center"
+        >
+          <h5 class="text-4xl text-white font-bold pb-[19px] w-[687px]">
+            National fuel distribution and supply.
+          </h5>
+          <a
+            href="#"
+            class="py-[13px] px-[40px] bg-primary text-white uppercase text-base inline-block outline-none border-none"
+            >Learn more</a
+          >
+        </div>
+      </div>
+    </section>
     <!-- ====== Service End ====== -->
 
     <!-- ====== Learn More Start ====== -->
