learn more section done!

--- a/index.html
+++ b/index.html
@@ -226,6 +226,28 @@
     <!-- ====== Service End ====== -->
 
     <!-- ====== Learn More Start ====== -->
+    <section class="bg-[#F0F0F0] pt-[89px] pb-[117px]">
+      <div class="max-w-container mx-auto">
+        <div class="flex">
+          <div
+            class="w-[413px] py-[100px] px-[75px] bg-primary flex items-center justify-center"
+          >
+            <h3 class="text-white font-bold text-4xl">
+              Learn more about our company
+            </h3>
+          </div>
+          <div
+            class="w-full bg-road bg-no-repeat bg-cover flex items-center justify-center"
+          >
+            <a
+              href="#"
+              class="py-[13px] px-[40px] bg-white text-primary uppercase text-base inline-block outline-none border-none font-semibold"
+              >Learn more</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- ====== Learn More End ====== -->
 
     <!-- ====== Brand Start ====== -->
