brand section done

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <!-- ====== Service End ====== -->
 
     <!-- ====== Learn More Start ====== -->
-    <section class="bg-[#F0F0F0] pt-[89px] pb-[117px]">
+    <section class="bg-[#F0F0F0] py-[136px]">
       <div class="max-w-container mx-auto">
         <div class="flex">
           <div
@@ -251,6 +251,16 @@
     <!-- ====== Learn More End ====== -->
 
     <!-- ====== Brand Start ====== -->
+    <section class="py-[116px]">
+      <div class="max-w-container mx-auto">
+        <div class="flex items-center justify-between">
+          <img src="./images/brand_logo1.png" alt="">
+          <img src="./images/brand_logo2.png" alt="">
+          <img src="./images/brand_logo3.png" alt="">
+          <img src="./images/brand_logo4.png" alt="">
+        </div>
+      </div>
+    </section>
     <!-- ====== Brand End ====== -->
 
     <!-- ====== Blog Start ====== -->
