blog section done!

--- a/index.html
+++ b/index.html
@@ -254,16 +254,69 @@
     <section class="py-[116px]">
       <div class="max-w-container mx-auto">
         <div class="flex items-center justify-between">
-          <img src="./images/brand_logo1.png" alt="">
-          <img src="./images/brand_logo2.png" alt="">
-          <img src="./images/brand_logo3.png" alt="">
-          <img src="./images/brand_logo4.png" alt="">
+          <img src="./images/brand_logo1.png" alt="" />
+          <img src="./images/brand_logo2.png" alt="" />
+          <img src="./images/brand_logo3.png" alt="" />
+          <img src="./images/brand_logo4.png" alt="" />
         </div>
       </div>
     </section>
     <!-- ====== Brand End ====== -->
 
     <!-- ====== Blog Start ====== -->
+    <section class="bg-[#F0F0F0] pt-[110px] pb-[162px]">
+      <div class="max-w-container mx-auto">
+        <div class="flex justify-between items-center">
+          <div
+            class="w-[340px] h-[401px] bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.6)),url('./images/worker.jpg')] bg-cover bg-no-repeat bg-center pt-[75px] pb-[55px] px-[45px]"
+          >
+            <h5 class="text-white font-bold text-[24px] w-[249px] pb-[52px]">
+              lorem ipsum dolor sit amet consectetur adipiscing elit sed do
+              eiusmod.
+            </h5>
+            <a
+              href="#"
+              class="py-[13px] px-[40px] bg-[#ffffff80] text-white font-bold uppercase text-xs inline-block outline-none border-none font-semibold"
+              >Learn more</a
+            >
+          </div>
+          <div
+            class="w-[340px] h-[401px] bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.6)),url('./images/plan.png')] bg-cover bg-no-repeat bg-center pt-[75px] pb-[55px] px-[45px]"
+          >
+            <h5 class="text-white font-bold text-[24px] w-[249px] pb-[52px]">
+              lorem ipsum dolor sit amet consectetur adipiscing elit sed do
+              eiusmod.
+            </h5>
+            <a
+              href="#"
+              class="py-[13px] px-[40px] bg-[#ffffff80] text-white font-bold uppercase text-xs inline-block outline-none border-none font-semibold"
+              >Learn more</a
+            >
+          </div>
+          <div
+            class="w-[340px] h-[401px] bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.6)),url('./images/pipe_single.png')] bg-cover bg-no-repeat bg-center pt-[75px] pb-[55px] px-[45px]"
+          >
+            <h5 class="text-white font-bold text-[24px] w-[249px] pb-[52px]">
+              lorem ipsum dolor sit amet consectetur adipiscing elit sed do
+              eiusmod.
+            </h5>
+            <a
+              href="#"
+              class="py-[13px] px-[40px] bg-[#ffffff80] text-white font-bold uppercase text-xs inline-block outline-none border-none font-semibold"
+              >Learn more</a
+            >
+          </div>
+        </div>
+        <p
+          class="mt-[29px] text-right uppercase text-base font-bold text-black"
+        >
+          <a href="#"
+            >MORE FROM THE BLLOG
+            <i class="fa-solid fa-angle-right font-bold text-base"></i
+          ></a>
+        </p>
+      </div>
+    </section>
     <!-- ====== Blog End ====== -->
 
     <!-- ====== Map Start ====== -->
