map section done!

--- a/index.html
+++ b/index.html
@@ -320,6 +320,11 @@
     <!-- ====== Blog End ====== -->
 
     <!-- ====== Map Start ====== -->
+    <section class="w-full">
+      <div class="w-full h-[450px] overflow-hidden">
+        <img src="./images/map.png" alt="" class="h-full w-full object-cover" />
+      </div>
+    </section>
     <!-- ====== Map End ====== -->
 
     <!-- ====== Contact Start ====== -->
