--- a/index.html
+++ b/index.html
@@ -328,6 +328,18 @@
     <!-- ====== Map End ====== -->
 
     <!-- ====== Contact Start ====== -->
+    <section class="py-[45px] bg-primary">
+      <div class="max-w-container mx-auto">
+        <div class="flex justify-between items-center">
+          <h3 class="text-4xl font-bold text-white">Want to join as member branch in your area?</h3>
+          <a
+            class="py-3.5 px-8 uppercase inline-block text-white border-2 border-[#fff]"
+            href="#"
+            >Contact</a
+          >
+        </div>
+      </div>
+    </section>
     <!-- ====== Contact End ====== -->
 
     <!-- ====== Footer Start ====== -->
