--- a/index.html
+++ b/index.html
@@ -331,7 +331,9 @@
     <section class="py-[45px] bg-primary">
       <div class="max-w-container mx-auto">
         <div class="flex justify-between items-center">
-          <h3 class="text-4xl font-bold text-white">Want to join as member branch in your area?</h3>
+          <h3 class="text-4xl font-bold text-white">
+            Want to join as member branch in your area?
+          </h3>
           <a
             class="py-3.5 px-8 uppercase inline-block text-white border-2 border-[#fff]"
             href="#"
@@ -343,6 +345,142 @@
     <!-- ====== Contact End ====== -->
 
     <!-- ====== Footer Start ====== -->
+    <footer class="pt-[149px] pb-[170px] bg-[#1F1F1F]">
+      <div class="max-w-container mx-auto">
+        <div class="flex items-center justify-between">
+          <div class="flex flex-col gap-y-[34px]">
+            <div><img src="./images/footer_logo.png" alt="" /></div>
+            <div class="flex flex-col gap-y-[15px]">
+              <div>
+                <i class="fa-solid fa-envelope-circle-check text-white"></i>
+                <a
+                  class="text-white font-normal text-[14px]"
+                  href="mailto:mail@yourcompany.com"
+                  >mail@yourcompany.com</a
+                >
+              </div>
+              <div>
+                <i class="fa-solid fa-phone-volume text-white"></i>
+                <a
+                  class="text-white font-normal text-[14px]"
+                  href="tel:+896 120 5889"
+                  >+896 120 5889 (Toll free)</a
+                >
+              </div>
+              <div>
+                <i class="fa-solid fa-map-location-dot text-white"></i>
+                <a class="text-white font-normal text-[14px]" href="#"
+                  >101 Baker Street, New York, USA, 12345</a
+                >
+              </div>
+            </div>
+            <div class="flex gap-x-3 items-center">
+              <div
+                class="h-[29px] w-[29px] bg-primary rounded-full flex justify-center items-center"
+              >
+                <a
+                  class="text-white"
+                  href="https://www.facebook.com"
+                  target="_blank"
+                  ><i class="fa-brands fa-facebook-f text-white"></i
+                ></a>
+              </div>
+              <div
+                class="h-[29px] w-[29px] bg-primary rounded-full flex justify-center items-center"
+              >
+                <a
+                  class="text-white"
+                  href="https://www.twitter.com"
+                  target="_blank"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+              </div>
+              <div
+                class="h-[29px] w-[29px] bg-primary rounded-full flex justify-center items-center"
+              >
+                <a
+                  class="text-white"
+                  href="https://www.linkedin.com"
+                  target="_blank"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+              </div>
+              <div
+                class="h-[29px] w-[29px] bg-primary rounded-full flex justify-center items-center"
+              >
+                <a
+                  class="text-white"
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div>
+            <h5 class="text-base text-white font-bold mb-[21px]">Company</h5>
+            <ul class="flex flex-col gap-y-[15px]">
+              <li>
+                <a class="text-white text-sm font-normal capitalize" href="#"
+                  >Home</a
+                >
+              </li>
+              <li>
+                <a class="text-white text-sm font-normal capitalize" href="#"
+                  >about</a
+                >
+              </li>
+              <li>
+                <a class="text-white text-sm font-normal capitalize" href="#"
+                  >service</a
+                >
+              </li>
+              <li>
+                <a class="text-white text-sm font-normal capitalize" href="#"
+                  >gallery</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h5 class="text-base text-white font-bold mb-[21px] capitalize">
+              others
+            </h5>
+            <ul class="flex flex-col gap-y-[15px]">
+              <li>
+                <a class="text-white text-sm font-normal capitalize" href="#"
+                  >Blog</a
+                >
+              </li>
+              <li>
+                <a class="text-white text-sm font-normal capitalize" href="#"
+                  >contact</a
+                >
+              </li>
+              <li>
+                <a class="text-white text-sm font-normal capitalize" href="#"
+                  >terms and conditions</a
+                >
+              </li>
+              <li>
+                <a class="text-white text-sm font-normal capitalize" href="#"
+                  >privacy policy</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h5 class="text-base text-white font-bold mb-[21px] capitalize">
+              certificate
+            </h5>
+            <div class="flex items-center gap-x-[5px]">
+              <img src="./images/iso.png" alt="" />
+              <img src="./images/liquid_green.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- ====== Footer End ====== -->
 
     <script src="./js/tailwind.config.js"></script>
