copyright section done!

--- a/index.html
+++ b/index.html
@@ -483,6 +483,16 @@
     </footer>
     <!-- ====== Footer End ====== -->
 
+    <!-- ====== Copyright Start ====== -->
+    <section class="bg-[#282828] py-[46px]">
+      <div class="max-w-container mx-auto">
+        <p class="text-base text-[#6C6C6C] font-medium">
+          © Copyright 2022 by AltDesain Studio – All right reserved.
+        </p>
+      </div>
+    </section>
+    <!-- ====== Copyright End ====== -->
+
     <script src="./js/tailwind.config.js"></script>
   </body>
 </html>
