image slider section and service section correction done!

--- a/index.html
+++ b/index.html
@@ -157,23 +157,35 @@
 
     <!-- ====== Image Slider Start ====== -->
     <section class="w-full overflow-hidden">
-      <div class="flex flex-shrink">
-        <img src="./images/car.jpg" alt="" class="h-full w-full object-cover" />
-        <img
-          src="./images/petrol.png"
-          alt=""
-          class="h-full w-full object-cover"
-        />
-        <img
-          src="./images/petrol_pipe.png"
-          alt=""
-          class="h-full w-full object-cover"
-        />
-        <img
-          src="./images/ship.png"
-          alt=""
-          class="h-full w-full object-cover"
-        />
+      <div class="flex flex-shrink gap-[8px]">
+        <div class="w-[25%]">
+          <img
+            src="./images/car.jpg"
+            alt=""
+            class="h-full w-full object-cover"
+          />
+        </div>
+        <div class="w-[25%]">
+          <img
+            src="./images/petrol.png"
+            alt=""
+            class="h-full w-full object-cover"
+          />
+        </div>
+        <div class="w-[25%]">
+          <img
+            src="./images/petrol_pipe.png"
+            alt=""
+            class="h-full w-full object-cover"
+          />
+        </div>
+        <div class="w-[25%]">
+          <img
+            src="./images/ship.png"
+            alt=""
+            class="h-full w-full object-cover"
+          />
+        </div>
       </div>
     </section>
     <!-- ====== Image Slider End ====== -->
@@ -192,8 +204,8 @@
             </div>
           </div>
         </div>
-        <div class="w-[50%]">
-          <img src="./images/pipelines.jpg" alt="" />
+        <div class="w-[50%] overflow-hidden">
+          <img src="./images/pipelines.jpg" alt="" class="w-full h-full object-cover" />
         </div>
       </div>
       <div class="w-full flex flex-wrap items-center">
